--- a/README
+++ b/README
@@ -12,3 +12,13 @@ Librarys:
   
   gtk
   gobject
+
+You can to tray this beta:
+ 
+  Debian/Ubuntu
+    
+    $ git clone git://github.com/lesthack/azucar.git
+    $ sudo apt-get install python-gtk2 python-keybinder xmms2 python-xmmsclient
+    $ python azucar.py
+    
+  
