--- a/README
+++ b/README
@@ -19,6 +19,7 @@ You can try now:
     
     $ git clone git://github.com/lesthack/azucar.git
     $ sudo apt-get install python-gtk2 python-keybinder xmms2 python-xmmsclient
+    $ cd azucar
     $ python azucar.py
     
   
