--- a/README
+++ b/README
@@ -12,13 +12,17 @@ Librarys:
   
   gtk
   gobject
+  pango
+  keybinder
+  logging
+  pynotify
 
 You can try now:
  
   Debian/Ubuntu
     
     $ git clone git://github.com/lesthack/azucar.git
-    $ sudo apt-get install python-gtk2 python-keybinder xmms2 python-xmmsclient
+    $ sudo apt-get install python-gtk2 python-keybinder python-notify xmms2 python-xmmsclient
     $ cd azucar
     $ python azucar.py
     
